--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -119,7 +119,7 @@
 </div>*@
 
 <div>
-    <a asp-action="Index">Volver al listado</a>
+    <a asp-action="Listado">Volver al listado</a>
 </div>
 
 @section Scripts {
