--- a/Views/Contrato/Listado.cshtml
+++ b/Views/Contrato/Listado.cshtml
@@ -1,4 +1,5 @@
 @model IEnumerable<Tp_Inmobiliaria_Ledesma_Lillo.Models.Contrato>
+
 @{
     ViewData["Title"] = "Contrato";
 }
@@ -8,7 +9,45 @@
 <p>
     <a asp-action="Crear" title="Nuevo Contrato"><i class="btn btn-primary fa-solid fa-square-plus"></i></a>
 </p>
+@using (Html.BeginForm ("Listado", "Contrato", FormMethod.Get)){
+    <p>Listar contratos proximos a vencer en:
+        <select  name="dias" id="dias" class="form-control-sm">
+            <option  value="" >Todos</option>
+            <option selected="@(ViewBag.dias==30)" value="30">30 dias</option>
+            <option selected="@(ViewBag.dias==60)" value="60">60 dias</option>
+            <option selected="@(ViewBag.dias==90)" value="90">90 dias</option>
+        </select>
+        <br>
+        <input type="submit" value="filtrar" class="btn btn-sm btn-primary">
+    </p>
+    }
+    @using (Html.BeginForm ("Listado", "Contrato", FormMethod.Get)){
+    <p>Filtrar por fechas: </p>
+        <label for="fecInf" class="control-label">Desde:</label>
+        <input type="datetime-local" class="form-control-sm" name="fecInf" id="fecInf">
+        <br>
+         <label for="fecSup" class="control-label">Hasta:</label>
+        <input type="datetime-local" class="form-control-sm" name="fecSup" id="fecSup">
+        <br>
+        <br>
+        <input type="submit" value="filtrar" class="btn btn-sm btn-primary">
+    }
+    @using (Html.BeginForm ("Listado", "Contrato", FormMethod.Get)){
+    <p>Filtrar por Inmueble: </p>
+        <label for="dir" class="control-label">Direccion:</label>
+        <select name="dir" id="dir">
+            @foreach(var item in ViewBag.Inmuebles){
+                <option value="@item.Direccion">@item.Direccion</option>
+            }
+        </select>
+        <br>
+        <input type="submit" value="filtrar" class="btn btn-sm btn-primary">
+    }
+
+
+   
 <table class="table table-striped table-hover">
+   
     <thead>
         <tr>
             <th>
@@ -33,6 +72,7 @@
         </tr>
     </thead>
     <tbody class="table-group-divider">
+
 @foreach (var item in Model) {
         <tr>
             <td>
