--- a/Views/Pago/Editar.cshtml
+++ b/Views/Pago/Editar.cshtml
@@ -12,17 +12,17 @@
             <input type="hidden" name="IdPago" value="@Model.IdPago"/>
             <div class="form-group">
                 <label asp-for="NumPago" class="control-label"></label>
-                <input asp-for="NumPago" class="form-control" disabled/>
+                <input asp-for="NumPago" class="form-control" />
                 <span asp-validation-for="NumPago" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Importe" class="control-label"></label>
-                <input asp-for="Importe" class="form-control" disabled/>
+                <input asp-for="Importe" class="form-control" />
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="FechaPago" class="control-label"></label>
-                <input asp-for="FechaPago" class="form-control" disabled/>
+                <input asp-for="FechaPago" class="form-control" />
                 <span asp-validation-for="FechaPago" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ContratoId" class="control-label"></label>
-                <input asp-for="ContratoId" class="form-control"disabled/>
+                <input asp-for="ContratoId" class="form-control"/>
                 <span asp-validation-for="ContratoId" class="text-danger"></span>
             </div>
             <br>
