--- a/Views/Pago/Guardar.cshtml
+++ b/Views/Pago/Guardar.cshtml
@@ -12,12 +12,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="NumPago" class="control-label"></label>
-                <input asp-for="NumPago" class="form-control" value="@ViewBag.tamanio"/>
+                <input asp-for="NumPago" class="form-control" />
                 <span asp-validation-for="NumPago" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Importe" class="control-label"></label>
-                <input asp-for="Importe" class="form-control" value="@ViewBag.monto"/>
+                <input asp-for="Importe" class="form-control" />
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -28,11 +28,11 @@
             <div class="form-group">
                 <label asp-for="Detalle" class="control-label"></label>
                 <input asp-for="Detalle" class="form-control"/>
-                <span asp-validation-for="Importe" class="text-danger"></span>
+                <span asp-validation-for="Detalle" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ContratoId" class="control-label"></label>
-                <input asp-for="ContratoId" class="form-control" value="@ViewBag.idContrato"/>
+                <input asp-for="ContratoId" class="form-control"/>
                 <span asp-validation-for="ContratoId" class="text-danger"></span>
             </div>
             <br>
